--- a/projetos/projeto-002/estilo/style.css
+++ b/projetos/projeto-002/estilo/style.css
@@ -1,16 +1,37 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+/*font-family: 'Sriracha', cursive;*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+/*font-family: 'Passion One', cursive;*/
+
+:root
+{
+  --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+  --fonte2:'Passion One', cursive;
+  --fonte3: 'Sriracha', cursive;
+}
+
 *
 {
     margin: 0px;
     padding: 0px;
+    
 }
 
 html, body
 {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
+    
 }
+
 header
 {
     background-color: black;
@@ -22,6 +43,8 @@ header > h1
 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;/*10% da largura = vw*/
 
 }
 header > p
@@ -47,6 +70,8 @@ section
     padding-bottom:10vh;
     line-height: 2em;
     padding-left: 30px;/*tira da parede*/
+    font-family: var(--fonte3);
+    font-size: 5vw;/*5% da viu porte= 5% da pela -> VW É LARGURA*/
 
 }
 
@@ -63,7 +88,8 @@ section.imagem
 }
 section.imagem > p
 {
-    width: 400px;
+    display: inline-block;/*para deixar como bloco*/
+    padding: 5px; /*para nao deixar grudado*/
     background-color: rgba(0, 0, 0, 0.252);
 }
 
