--- a/projetos/projeto-002/estilo/style.css
+++ b/projetos/projeto-002/estilo/style.css
@@ -71,8 +71,23 @@ section
     line-height: 2em;
     padding-left: 30px;/*tira da parede*/
     font-family: var(--fonte3);
-    font-size: 5vw;/*5% da viu porte= 5% da pela -> VW É LARGURA*/
+    font-size: 2.5vw;/*2.5% da viu porte= 2.5% da pela -> VW É LARGURA*/
 
+}
+section > p
+{
+    padding-bottom: 2em; /*para dar um espaço entre o tag p */
+}
+section#img01
+{
+background-image: url('../imagens/background001.jpg');
+background-position: right center;
+
+}
+section#img02
+{
+    background-image: url('../imagens/background002.jpg');
+    
 }
 
 
@@ -85,12 +100,19 @@ section.imagem
 {
     background-color:rgb(51, 51, 51);
     color: white;
+    box-shadow:inset 6px 6px 13px 0px rgba(0, 0, 0, 0.476);
+    background-size: cover;
+    background-attachment: fixed; /*esse que deixar fixado a imagem. fix*/
+
+    
 }
 section.imagem > p
 {
     display: inline-block;/*para deixar como bloco*/
     padding: 5px; /*para nao deixar grudado*/
-    background-color: rgba(0, 0, 0, 0.252);
+    background-color: rgba(0, 0, 0, 0.514);
+    
+    text-shadow: 1px 1px 0px black;
 }
 
 
