--- a/projetos/projeto_modulo-4/pacote-d013/pacote-d013/proj_4/estilos/style.css
+++ b/projetos/projeto_modulo-4/pacote-d013/pacote-d013/proj_4/estilos/style.css
@@ -33,5 +33,27 @@ section#telefone{
     background: url('/projetos/projeto_modulo-4/pacote-d013/pacote-d013/imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
+iframe#tela
+{
+    position: relative;
+    top:80px ;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+}
+section#redes-sociais{
+    text-align: right;
+}
+
+
+section#redes-sociais imag
+{
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.301);
+}
+
 
 
