--- a/modo-04/media-queries/imagens/mq002/estilos/paisagem.css
+++ b/modo-04/media-queries/imagens/mq002/estilos/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF-";
 
 /* Aparelho deitado (landscape) */
+
+body
+{
+    background-image: url('../imagen/cev-landscape.jpg');
+    background-position: left bottom;
+}
