--- a/modo-04/media-queries/imagens/mq002/estilos/retrato.css
+++ b/modo-04/media-queries/imagens/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-";
 
 /*A parelho em pé*/
+body
+{
+    background-image: url('../imagen/cev-portrait.jpg');
+    background-position: center bottom;
+}
