--- a/modo-04/media-queries/imagens/mq004/estilos/mediaquery.css
+++ b/modo-04/media-queries/imagens/mq004/estilos/mediaquery.css
@@ -1,7 +1,90 @@
 @charset "UTF-8";
 
 /* Todas as demais midias */
+
+/* Typical device Breakpoints
+------------------------------
+
+Pequenas telas: até 600px 
+Celular: de 600px até 768px
+Tablet: 768px até 992px 
+Desktop: 992px até 1200px 
+Grandes telas: acima de 1200px
+
+*/
+
+
+
+
+
+/*Telas pequenas 600px*/
+@media screen and (max-width: 600px)
+{
+
+    img#phne{display: block;}
+    img#tablet{display:none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+    
+}
+@media screen and (min-width:600px) and (max-width:768px)
+{
+    
+    img#phne{display: block;}
+    img#tablet{display:none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: none;}
+    
+
+}
+/*como ja fez no css do style, entao pode ser iguinorado aqui. */
+
 @media print
 {
     
+}
+/*tablet*/
+@media screen and (min-width: 768px) and (max-width: 992px)
+{
+body
+{
+    background-image: url(../imagens/back-tablet.jpg);
+}
+img#phne{display: none;}
+img#tablet{display: block;}
+img#print{display: none;}
+img#pc{display: none;}
+img#tv{display: none;}
+
+}
+/*desktop*/
+@media screen and (min-width: 992px) and (max-width: 1200px)
+{
+body
+{
+    background-image: url(../imagens/back-pc.jpg);
+}
+img#phne{display: none;}
+img#tablet{display: none;}
+img#print{display: none;}
+img#pc{display: block;}
+img#tv{display: none;}
+
+}
+/*grandes telas*/
+@media screen and (min-width:1200px)
+{
+body
+{
+    background-image: url(../imagens/back-tv.jpg);
+}
+
+    img#phne{display: none;}
+    img#tablet{display: none;}
+    img#print{display: none;}
+    img#pc{display: none;}
+    img#tv{display: block;}
+
 }
