--- a/prog(BR)/modo001/backgroud-aula/style.css
+++ b/prog(BR)/modo001/backgroud-aula/style.css
@@ -25,9 +25,52 @@ div.q4
     width:100px;
     height:100px;
     background-image: url('./imagens-repetitiva.jpg');
+    color: green;
 }
 p
 {
 background-color: burlywood;
+background-size: auto;
+background-repeat: ;
+background-position: ;
+background-attachment: ;
 
 }
+p.a1
+{
+background: linear-gradient(red, blue);
+}
+p.a2
+{
+    background: linear-gradient(orange, yellow, pink);
+}
+p.a3
+{
+    background: linear-gradient(to right, gray, brown, purple );
+}
+p.a4
+{
+    background: linear-gradient(to left, gray, brown, purple );
+}
+p.a5
+{
+    background: linear-gradient(to top, gray, brown, purple );
+}
+p.a6
+{
+    background: linear-gradient(to bottom, gray, brown, purple );
+}
+p.a7
+{
+    background: linear-gradient(10deg, rgb(50, 219, 12), brown, purple );
+}p.a8
+{
+    background: linear-gradient(30deg, rgb(113, 6, 244), brown, purple );
+}p.a9
+{
+    background: linear-gradient(to top, rgb(230, 168, 10) 10%, rgb(232, 11, 11) 50%, purple );
+}p.a10
+{
+    background: linear-gradient( gray 40%, brown 60%, purple 90% );
+}
+
